--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -1,7 +1,7 @@
 
 body {
     margin: 0%;
-    background-color: #23aa94;
+    background-color: #1b0a57;
     font-family: Arial, Helvetica, sans-serif;
 }
 
