--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -1,7 +1,7 @@
 
 body {
     margin: 0%;
-    background-color: #270a8d;
+    background-color: #310574;
     font-family: Arial, Helvetica, sans-serif;
 }
 
