modified:   css/styleguide.css

--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -1,7 +1,7 @@
 
 body {
     margin: 0%;
-    background-color: #310574;
+    background-color: #d4d63b;
     font-family: Arial, Helvetica, sans-serif;
 }
 
