modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css

--- a/css/styleguide-explore-exhibition-event.css
+++ b/css/styleguide-explore-exhibition-event.css
@@ -1,4 +1,9 @@
 
+body {
+    margin: 0%;
+    background-color: #c93297;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .yellowbox{
     flex-direction: column;
     justify-content: center;
