--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -281,6 +281,9 @@ footer{
     ul{
         gap: 20px;
     }
+    p{
+        font-size: 18px;
+    }
     
    .infotext-2{
     flex-direction: column;
