--- a/css/styleguide-explore-exhibition-event.css
+++ b/css/styleguide-explore-exhibition-event.css
@@ -44,6 +44,7 @@
     gap: 50px;
 }
 .contact-section{
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -54,6 +55,11 @@
     padding: 30px 30px;
         gap: 30px;
         max-width: 50%;
+}
+.contact-box{
+    padding: 30px 30px;
+    gap: 30px;
+    
 }
 .event-img{
     max-width: 30%;
