modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   events.html 	modified:   exhibition.html 	modified:   explore.html 	modified:   get-involved.html 	modified:   images/girl-scientsist.png 	modified:   index.html 	modified:   visit-us.html

--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -11,6 +11,8 @@ nav {
     justify-content: flex-start;
     align-items: center;
     padding-left: 50px;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 ul {
