--- a/css/styleguide-explore-exhibition-event.css
+++ b/css/styleguide-explore-exhibition-event.css
@@ -35,6 +35,8 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 20%;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .event-section{
@@ -50,6 +52,9 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
+}
+.container-of-yellowbox{
+    gap: 100px;
 }
 .event{
     padding: 30px 30px;
@@ -72,7 +77,7 @@
         flex-direction: column;
     }
     .event{
-        max-width: 80%;
+        max-width: 90%;
     }
     .event-img{
         max-width: 50%;
