modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   events.html 	modified:   exhibition.html 	modified:   explore.html 	modified:   get-involved.html 	modified:   index.html 	modified:   visit-us.html

--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -35,6 +35,12 @@ li {
     text-decoration: none;
     font-size: 30px;
 }
+.navlink:hover{
+    color: #310574;
+}
+.navlink:active{
+    color: #ffffff;
+}
 
 h1{
     font-size: 64px;
