--- a/css/styleguide-explore-exhibition-event.css
+++ b/css/styleguide-explore-exhibition-event.css
@@ -53,9 +53,16 @@
     align-items: center;
     gap: 50px;
 }
-.container-of-yellowbox{
-    gap: 100px;
+.container-of-yellowbox {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 100px; 
 }
+
 .event{
     padding: 30px 30px;
         gap: 30px;
@@ -76,11 +83,22 @@
     .event-section{
         flex-direction: column;
     }
+    .yellowbox-p{
+        font-size: 30px;
+    }
     .event{
         max-width: 90%;
     }
     .event-img{
         max-width: 50%;
+    }
+    .container-of-yellowbox{
+        flex-direction: column;
+        align-items: center;
+        gap: 0px;
+    }
+    .yellowbox{
+        width: auto;
     }
 
     }
