modified:   css/styleguide-explore-exhibition-event.css 	modified:   css/styleguide.css 	modified:   events.html 	modified:   exhibition.html 	modified:   explore.html 	modified:   get-involved.html 	modified:   index.html 	modified:   visit-us.html

--- a/css/styleguide-explore-exhibition-event.css
+++ b/css/styleguide-explore-exhibition-event.css
@@ -38,6 +38,19 @@
     padding-top: 30px;
     padding-bottom: 30px;
 }
+.section-headline{
+
+    color: #F28B0B;
+
+    margin-top: 20px;
+
+    margin-bottom: 20px;
+
+    margin-left: auto;
+
+    margin-right: auto;
+
+}
 
 .event-section{
     display: flex;
@@ -78,13 +91,112 @@
     display: flex;
     flex-direction: row;
 }
+.form-container{
+    display: flex;
+    flex-direction: column;
+}
+form{
+    display: flex;
+    flex-direction: column;
+}
+input[type=text], textarea {
+    width: 100%; 
+    padding: 12px;  
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box; 
+    margin-top: 6px;
+    margin-bottom: 16px; 
+  }
+  input[type=reset]{
+    width: 100%;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    background-color: #F28B0B;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  input[type=reset]:hover {
+    background-color: #e9c08e;
+  }
+  label{
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+  }
+  /* images*/
+
+  .logo {
+    width: auto; 
+    height: 100px;
+  }
+  .hero{
+    width: 100%; 
+    height: auto;
+  }
+  .dino{
+    width: 100%; 
+    height: auto;
+  }
+  .navlogo{
+    width: auto; 
+    height: 60px;
+  }
+  .night-dino{
+    width: 100%; 
+    height: auto;
+  }
+  .planet-small{
+    width: 100%; 
+    height: auto;
+  }
+  .two-rocks{
+    width: 100%; 
+    height: auto;
+  }
+  .scientest{
+    width: 100%; 
+    height: auto;
+  }
+  .museum{
+    width: 100%; 
+    height: auto;
+  }
+  .rock{
+    width: 100%; 
+    height: auto;
+  }
+  .kids{
+    width: 100%; 
+    height: auto;
+  }
+  .poster{
+    width: 100%; height: auto;
+  }
+  .science{
+    width: 100%; 
+    height: auto;
+  }
+  .planet-stars{
+    width: 100%; 
+    height: auto;
+  }
+  .fossil{
+    width: 100%; 
+    height: auto;
+  }
 
 @media (max-width: 1200px){
     .event-section{
         flex-direction: column;
+        gap: 0px;
     }
+  
     .yellowbox-p{
-        font-size: 30px;
+        font-size: 20px;
     }
     .event{
         max-width: 90%;
@@ -97,8 +209,41 @@
         align-items: center;
         gap: 0px;
     }
+    .contact-section{
+        flex-direction: column;
+        gap: 0px;
+    }
+    .contact-box{
+        width: 90%;
+        padding: 0px;
+    }
     .yellowbox{
         width: auto;
+        padding: 40px 40px;
+    }
+    .imagebox{
+        width: 50%;
+        padding: 0px 0px;
+    }
+
+    .windimg{
+        display: none;
+    }
+    .infop-variant1{
+        text-align: left;
+    }
+
+    .involved-img{
+        width: 100%;
+    }
+    .image-over-section{
+        max-width: 90%;
+    }
+    label{
+        font-size: 20px;
+    }
+    .form-container{
+        width: 90%;
     }
 
     }
