modified:   css/styleguide-explore-exhibition-event.css 	modified:   index.html

--- a/css/styleguide-explore-exhibition-event.css
+++ b/css/styleguide-explore-exhibition-event.css
@@ -133,7 +133,7 @@ input[type=text], textarea {
     width: auto; 
     height: 100px;
   }
-  .hero{
+  .hero-background{
     width: 100%; 
     height: auto;
   }
