--- a/css/styleguide-explore-exhibition-event.css
+++ b/css/styleguide-explore-exhibition-event.css
@@ -170,7 +170,8 @@ input[type=text], textarea {
     height: auto;
   }
   .kids{
-    width: 100%; 
+   max-width: 1000px;
+   width: 100%;
     height: auto;
   }
   .poster{
