--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -416,6 +416,14 @@ footer{
     height: 200px;
 
 }
+.img-on-index{
+    width: 100%;
+    height: auto;
+}
+.hero-background{
+    width: 100%;
+    height: auto;
+}
  
 @media (max-width: 1200px){
 
