--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -1,4 +1,8 @@
 
+/* global styles for the site, and the index is styled from here*/
+
+/* i see that after the wonderful help, where i copied the code from you, to try out, when we made the test remember? it didtent change any thing
+so i forgot to go back to before the test, and now i see there is strange spacing between every line exsept where i worked after the help from you*/
 
 body {
 
