modified:   css/styleguide-pages.css 	modified:   css/styleguide.css 	modified:   events.html 	modified:   exhibition.html 	modified:   explore.html 	modified:   get-involved.html 	modified:   index.html 	modified:   visit-us.html

--- a/css/styleguide-pages.css
+++ b/css/styleguide-pages.css
@@ -1,6 +1,5 @@
 
-/* styles for the pages, and the images, so to not have inline styling on the img. I had read the to size img you can do that in the html file too, but i understand that inline 
-styling in html is not something you want us to learn and use, and i understand tris now*/
+/* styles for the pages, and the images */
 
 .yellowbox{
     flex-direction: column;
@@ -129,10 +128,7 @@ input[type=text], textarea {
     color: white;
     font-weight: bold;
   }
-  /* images, and i see that i have not practis the dry method here, but the time i had to work out 
-  to fix my inline styling from the html, it was easyer for me to do it in a list like this, so i know that i have addes all the pictures.
-  this is a learning piont where i know what not to do next time, and remenber to sett up a stylesheet for just img to have better control.*/
-
+  
   .logo {
     width: auto; 
     height: 100px;
@@ -149,47 +145,14 @@ input[type=text], textarea {
     width: auto; 
     height: 60px;
   }
-  .night-dino{
-    width: 100%; 
-    height: auto;
-  }
-  .planet-small{
-    width: 100%; 
-    height: auto;
-  }
-  .two-rocks{
-    width: 100%; 
-    height: auto;
-  }
-  .scientest{
-    width: 100%; 
-    height: auto;
-  }
-  .museum{
-    width: 100%; 
-    height: auto;
-  }
-  .rock{
-    width: 100%; 
-    height: auto;
-  }
+
   .kids{
    max-width: 1000px;
    width: 100%;
     height: auto;
   }
-  .poster{
-    width: 100%; height: auto;
-  }
-  .science{
-    width: 100%; 
-    height: auto;
-  }
-  .planet-stars{
-    width: 100%; 
-    height: auto;
-  }
-  .fossil{
+  
+  .fossil, .planet-stars, .science, .poster, .rock, .museum, .scientest, .two-rocks, .planet-small, .night-dino{
     width: 100%; 
     height: auto;
   }
